# gadk

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  ONBOARDING.md  README.md  alerts.jsonl  conftest.py  events.jsonl  local.properties  metrics.jsonl  migrate-pass-1a-v2.sh  migrate-pass-1a.sh  monitor_swarm.sh  pyproject.toml  requirements.txt  run_handoff_demo.py  state.json  test_llm.py  test_metrics.jsonl
.claude/: settings.json
.claude/commands/: status.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.mypy_cache/3.11/: cache.db-journal
.serena/: project.yml
.serena/memories/: architecture_patterns.md  code_style.md  project_overview.md  suggested_commands.md  tech_stack.md
artifacts/system-user-skills-servers/: server-inventory.md  skills-inventory.md
docs/: ARCHITECTURE.md  GADK_AGENT_DEVELOPER_GUIDE.md  GADK_DEVELOPER_ALMANAC.md  GADK_OPERATIONAL_RUNBOOK.md  MCP_SETUP.md  PRD.md  TECH_DEBT.md  TECH_STACK.md  WORKFLOW_EXAMPLES.md  chimera-security-fix.md  chimera_tasks.md  review.md  suggested_task.md
docs/plans/: 2026-04-20-gadk-comprehensive-master-plan.md  2026-04-21-gadk-v2-autonomy-overhaul-v2.md  2026-04-21-gadk-v2-autonomy-overhaul.md  2026-04-25-dbos-phase-controller-wrapper.md  2026-04-25-prompt-optimization-system.md  2026-04-26-gadk-v2-autonomy-ui-overhaul.md  2026-04-26-ollama-cloud-agents.md  2026-04-26-ollama-minimax-cloud.md
docs/product/: architecture-pinnacle.md  product-requirements.md  product-vision.md  roadmap.md
project-chimera/.gitnexus/: meta.json
src/: AndroidManifest.xml  GameScreen.kt  GameViewport.kt  MainActivity.kt  android_rpg_sdlc.py  autonomous_sdlc.py  build.gradle.kts  chimera_ideation.py  config.py  exceptions.py  main.py  planned_main.py  planner.py  review.txt  settings.gradle.kts  state.py  test_cicd.py  ui_theme.kt
src/agents/: architect.py  builder.py  critic.py  finops.py  governor.py  ideator.py  orchestrator.py  pulse.py  refactor_agent.py
src/capabilities/: __init__.py  contracts.py  helpers.py  registry.py  service.py
src/cli/: __init__.py  dashboard.py  interactive.py  swarm_cli.py  swarm_ctl.py
src/dspy/: __init__.py  declarative_quality_gate.py  dspy_adaptive_rag.py  dspy_code_generator.py  dspy_meta_optimizer.py  dspy_optimized_router.py  dspy_test_generator.py  meta_learning_orchestrator.py  multi_agent_ensemble.py  self_optimizing_prompt.py
src/harness/: __init__.py  agent_harness.py  tournament_engine.py
src/main/: AndroidManifest.xml
src/mcp/: __init__.py  sdlc_client.py  server.py
src/memory/: __init__.py  graph_store.py  memory_graph.py
src/observability/: __init__.py  adk_callbacks.py  cost_tracker.py  litellm_callbacks.py  logger.py  metrics.py  model_performance.py
src/orchestration/: blueprint_planner.py  graph_orchestrator.py  reflection_node.py
src/services/: __init__.py  agent_contracts.py  agent_decisions.py  autonomous_loop.py  dbos_phase_workflow.py  dbos_recovery.py  embed_quota.py  embedder.py  memori_client.py  model_router.py  ollama_cloud_backend.py  phase_controller.py  phase_store.py  prompt_enhancer.py  quality_gates.py  retrieval_context.py  runtime_strategy.py  sdlc_phase.py  self_prompt.py  session_store.py  specialist_registry.py  structured_output.py  task_queue.py  tenant_manager.py  vector_index.py  workflow_graphs.py
src/spark_app/: __init__.py  schemas.py  swarm_analytics.py
src/staged_agents/: AndroidManifest.xml  README_TEST_SUITE.md  build.gradle.kts  rpg_combat.kt  rpg_core-engine.kt  sdlc-missing-input-validation-and-error-handl.kt  settings.gradle.kts
src/test/: chimera_unit_test.kt
src/testing/: github_mocks.py  mock_llm.py  test_tools.py
src/tools/: content_guards.py  dispatcher.py  filesystem.py  github_tool.py  sandbox_executor.py  scraper.py  smithery_bridge.py  toolbank_app.py  web_search.py
src/utils/: file_lock.py
src/webapp/: __init__.py  chat_server.py  server.py
tests/: test_autonomous_sdlc_phase_gated.py  test_comprehensive_e2e.py  test_config_settings.py  test_content_guards.py  test_dispatcher.py  test_e2e_observability.py  test_exceptions.py  test_fallbacks.py  test_filesystem.py  test_github_tool.py  test_llm.py  test_main_handler_async.py  test_persistent_sessions.py  test_planner_contracts.py  test_pr_automation.py  test_runtime_capabilities.py  test_sandbox.py  test_smithery_bridge.py  test_state.py  test_state_atomicity.py  test_sub_agents.py  test_swarm_e2e.py  test_web_search.py
tests/agents/: test_architect.py  test_builder.py  test_finops.py  test_governor.py  test_pulse.py  test_refactor_agent.py
tests/capabilities/: test_registry.py  test_service.py
tests/cli/: test_dashboard.py  test_interactive.py  test_swarm_cli.py  test_swarm_cli_capabilities.py  test_swarm_cli_metrics.py  test_swarm_cli_phase.py  test_swarm_ctl.py
tests/dspy/: test_dspy_modules.py
tests/harness/: test_harness.py
tests/mcp/: test_sdlc_client.py  test_stdio_server.py
tests/memory/: test_graph_store.py  test_memory_graph.py
tests/observability/: test_adk_callbacks.py  test_cost_tracker.py  test_litellm_callbacks.py  test_logger.py  test_metrics.py  test_model_performance.py
tests/orchestration/: __init__.py  test_blueprint_planner.py  test_graph_orchestrator.py  test_graph_orchestrator_integration.py  test_reflection_node.py
tests/runtime/: test_autonomous_runtime.py
tests/services/: test_agent_contracts.py  test_agent_decisions.py  test_autonomous_loop.py  test_dbos_crash_recovery.py  test_dbos_phase_workflow.py  test_dbos_recovery.py  test_embed_quota.py  test_embedder.py  test_memori_client.py  test_model_router.py  test_ollama_cloud_backend.py  test_phase_controller.py  test_phase_store.py  test_quality_gates.py  test_retrieval_backend_routing.py  test_retrieval_context.py  test_retrieval_graph.py  test_sdlc_phase.py  test_self_prompt.py  test_self_prompt_deprecation.py  test_specialist_registry.py  test_sqlite_vec_backend.py  test_structured_output.py  test_task_queue.py  test_tenant_manager.py  (+4 more)
webapp/: index.html  package-lock.json  package.json  vite.config.ts
(+104 files in other folders)
