[project]
name = "gadk"
version = "0.1.0"
description = "Cognitive Foundry Swarm — multi-agent SDLC system on Google ADK"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }

[project.optional-dependencies]
dev = [
    # Pin ruff to the CI version so `ruff format` output matches between
    # local and CI. A loose `>=0.5` will otherwise pick up whatever
    # minor/major is current, whose formatter can disagree with the
    # CI-pinned version and produce spurious lint-gate failures.
    # Keep this in sync with `.github/workflows/ci.yml`.
    "ruff==0.5.7",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "bandit>=1.7",
    "pre-commit>=3.7",
    "coverage[toml]>=7.5",
    "types-requests",
]
memory = [
    # Phase 3b sqlite-vec vector retrieval backend. Optional because
    # `Config.RETRIEVAL_BACKEND` defaults to keyword; only callers that
    # flip the flag need this extra.
    "sqlite-vec>=0.1.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs", ".venv", "build", "dist", "src/staged_agents"]

[tool.ruff.lint]
# Repo-wide baseline: keep only hard-error rules (E/F/W) + isort so CI stays
# green on the pre-existing codebase. Strict semantic rules (B, BLE, SIM, UP,
# RUF) are opted back in per-file for the new Phase-1+ modules.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
]
ignore = [
    "E501",  # line-length handled by formatter
    "E402",  # module-level import not at top: legitimate with configure_logging()
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["BLE"]
"src/staged_agents/**" = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
# Strict rules apply to the SDLC phase-gate stack and new agents only.
# Everything else stays on the relaxed baseline above.
"src/services/sdlc_phase.py" = []
"src/services/quality_gates.py" = []
"src/services/phase_controller.py" = []
"src/services/self_prompt.py" = []
"src/services/specialist_registry.py" = []
"src/agents/architect.py" = []
"src/agents/governor.py" = []
"src/mcp/sdlc_client.py" = []
"src/testing/github_mocks.py" = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["src/staged_agents", "build", "dist", "docs"]

# Per-module strict subset. We spell out the per-module strict flags
# rather than `strict = true` because the latter includes
# `disallow_subclassing_any`, which trips on every `class X(BaseModel)`
# — pydantic's mypy plugin is incompatible with our pinned mypy==1.11.1
# (plugin requires mypy>=1.14). Flip to `strict = true` +
# `plugins = ["pydantic.mypy"]` in pyproject when the CI mypy pin lifts.
[[tool.mypy.overrides]]
module = ["src.services.sdlc_phase", "src.services.quality_gates", "src.services.phase_controller"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_any_generics = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/staged_agents/*",
    "src/testing/*",
    "src/test/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0  # advisory during Phase 0; Phase 5 raises to 65

[tool.bandit]
exclude_dirs = ["tests", "src/staged_agents"]
skips = ["B101"]  # assert_used — acceptable in controlled contexts
